Añadido contenido HTML

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <span>Home</span>
     </nav>
   </header>
-  <div></div>
+  <div>
+    <p>Contenido HTML</p>
+  </div>
   <footer>
     <span>Footer de la pagina</span>
   </footer>
