user2: añadito atributo html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <div>
     <!-- Comentario random -->
     <p>Contenido HTML</p>
+    <p>Atributo HTML</p>
   </div>
   <footer>
     <span>Footer de la pagina</span>
