A corregir por: user2, user1 mejorado contenido HTML

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <div>
         <!-- Comentario random -->
-        <p>Contenido HTML</p>
+        <p>Contenido HTML hotfix user1</p>
         <p>Atributo HTML</p>
     </div>
     <footer>
